# aviutl_extram2

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  build.bash
.github/workflows/: build.yml  releaser.yml
src/c/: CMakeLists.txt  extram2.c  extram2_remote.c  hash.c  hash.h  intram2.c  ipc.h  kvs.c  kvs.h  lua.c  main.c  process.c  process.h  splitmix64.h  test_kvs.c
src/exa/: CacheText2.exa
src/lua/: @Cache2.anm  CMakeLists.txt  Cache2.lua  Extram2.lua
